--- a/example/config/workload.yaml
+++ b/example/config/workload.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: example-workload
+  name: client
+  labels:
+     app: client
 spec:
   containers:
   - name: example-workload
-    image: spiffe-csi-driver-example-workload:example
-    imagePullPolicy: Never
+    image: ppatel1989/spiffe-csi-driver-example-workload:example
     volumeMounts:
     - name: spiffe-workload-api
       mountPath: /spiffe-workload-api
@@ -14,6 +15,8 @@ spec:
     env:
     - name: SPIFFE_ENDPOINT_SOCKET
       value: unix:///spiffe-workload-api/spire-agent.sock
+  imagePullSecrets:
+    - name: regcred
   volumes:
   - name: spiffe-workload-api
     csi:
